# vuln-representation-layers

./: .gitignore  INSTALL.md  README.md  pyproject.toml
scripts/: add_family_motif_features.py  cache_graph_tensors.py  error_analysis.py  family_analysis.py  family_gnn_analysis.py  family_motif_analysis.py  feature_importance_familymotif.py  graph_utils.py  mine_family_motifs.py  motif_features.py  prepare_dataset.py  prepare_graph_dataset.py  run_baselines.py  run_baselines_familymotif.py  run_step1_experiments.sh  run_step2_analyses.sh  run_step3_family_motif_experiments.sh  run_step4_mlp.sh  run_step4_neural.sh  run_step5_gnn_lazy.sh  summarize_gnn_metrics.py  summarize_metrics.py  summarize_mlp_metrics.py  summarize_neural_metrics.py  train_gnn_fusion_lazycache.py  train_mlp_fusion.py  train_transformer_fusion.py
