[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "megavul-ml"
version = "0.1.0"
description = "MegaVul layered signal-recovery project"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Kiyoshi Watanabe" }
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pyarrow>=14.0",
  "scikit-learn>=1.4",
  "xgboost>=2.0",
  "joblib>=1.3",
  "torch>=2.2",
  "jupyterlab>=4.0",
  "ipykernel>=6.0",
  "matplotlib>=3.8",
  "seaborn>=0.13",
]

[tool.setuptools]
py-modules = []